# gramps-web-api

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .pylintrc  .travis.yml  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.base  Dockerfile.slim  MANIFEST.in  README.md  SECURITY.md  _config.yml  alembic.ini  apispec.yaml  docker-compose.yml  docker-entrypoint.sh  index.html  mkdocs.yml  mypy.ini  pyproject.toml  requirements-dev.txt  requirements_dev.txt  semantic_index.txt  setup.cfg  setup.py  swagger-config.json
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/: dependabot.yml  pytest.yaml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: base-image.yml  codeql.yml  docs.yml  image.yml  pypi.yml  swagger.yml  test.yml
alembic_users/: README  env.py
alembic_users/versions/: 2082445b0769_add_oidc_accounts_table_for_secure_.py  22c8d1fba959_add_trees_enabled.py  66e56620891a_add_trees_table.py  6d8f3cb50b71_add_persistent_access_tokens_table.py  84960b7d968c_use_bigint_for_quota_media.py  a8e57fe0d82e_.py  a8e57fe0d82e_add_columns_for_ai_quota.py  b0582f54029c_use_bigint_for_usage_media.py  b2c3d4e5f6a7_add_tree_config_column.py  c1d2e3f4a5b6_merge_task_tree_and_tree_config.py  c89728e71264_.py  e176543c72a8_add_tree_column_to_user.py  e5e738d09fa7_added_configuration_table.py  f3a1c8e92b47_add_task_tree_table.py
demo/: Dockerfile  config.cfg
docs/: Configuration.md  Deployment.md  Development-instructions.md  Testing.md  Users.md  api.md  design_oauth_account_linking.md  index.md  troubleshooting.md
gramps_webapi/: __init__.py  __main__.py  _version.py  api.py  app.py  auth.py  celery.py  client.py  config.py  const.py  dbloader.py  dbmanager.py  logging_utils.py  profiler.py  translogger.py  types.py  undodb.py  verify_lib.py  wsgi.py
gramps_webapi/api/: __init__.py  auth.py  blueprint.py  cache.py  check.py  dna.py  emails.py  export.py  file.py  html.py  image.py  media.py  media_importer.py  people_families_cache.py  ratelimiter.py  report.py  s3.py  search.py  tasks.py  telemetry.py  util.py
gramps_webapi/auth/: __init__.py  const.py  cookies.py  oidc.py  oidc_helpers.py  passwords.py  sql_guid.py  token_blocklist.py  trusted_jwt.py
gramps_webapi/data/: apispec.yaml  empty_gramps_auth.cfg  example_gramps.cfg  example_gramps_auth.cfg  test.cfg  test_auth.cfg
gramps_webapi/templates/: confirmation.html  reset_password.html  reset_password_base.html  reset_password_error.html
gramps_webapi/util/: __init__.py  celery.py  passwords.py  sql_guid.py
scripts/: generate_openapi_spec.py  s3_rename.py  start_dev_container.sh
tests/: __init__.py  conftest.py  test_api.py  test_app.py  test_check.py  test_cli.py  test_db.py  test_dna_match_parser.py  test_embeddings.py  test_file.py  test_image.py  test_import_util.py  test_init.py  test_jwt.py  test_limiter.py  test_llm_tools.py  test_logging_utils.py  test_map_tile.py  test_marital_status.py  test_media_importer.py  test_migrate_grampsdb.py  test_oidc_auth.py  test_password.py  test_postgres.py  test_private_proxy.py  test_s3.py  test_schema.py  test_search_metadata.py  test_sqlauth.py  test_telemetry.py  test_text.py  test_trusted_jwt_auth.py  test_undodb.py  test_util.py  test_verify_lib.py  test_version.py  test_whitespace_stripping.py
tests/test_endpoints/: __init__.py  checks.py  runners.py  test_access_tokens.py  test_anniversaries_ics.py  test_bookmarks.py  test_chat.py  test_citations.py  test_config.py  test_delete.py  test_dna.py  test_events.py  test_exporters.py  test_facts.py  test_families.py  test_file.py  (+49 more)
(+104 files in other folders)
