[project]
name = "gramps-webapi"
description = "A RESTful web API for the Gramps genealogical database."
authors = [
  { name = "Gramps Development Team" },
  { name = "David M. Straub", email = "straub@protonmail.com" }
]
license = { text = "AGPL-3.0-or-later" }
readme = "README.md"
dynamic = ["version"]
keywords = ["RESTful", "web API", "genealogy", "Gramps"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "gramps-desktop[GUI,i18n]==5.2.*",
    "Click>=7.0",
    "Flask>=2.1.0",
    "Flask-Caching>=2.0.0",
    "Flask-Compress",
    "Flask-Cors",
    "Flask-JWT-Extended>=4.2.1,!=4.4.0,!=4.4.1",
    "Flask-Limiter>=2.9.0",
    "Flask-SQLAlchemy",
    "marshmallow>=3.13.0",
    "webargs",
    "SQLAlchemy",
    "pdf2image",
    "Pillow",
    "bleach[css]>=5.0.0",
    "jsonschema",
    "ffmpeg-python",
    "boto3",
    "alembic",
    "celery[redis]",
    "Unidecode",
    "pytesseract",
    "gramps-ql>=0.3.0",
    "object-ql>=0.1.2",
    "sifts>=0.8.3",
]

[project.optional-dependencies]
ai = ["sentence-transformers", "openai"]

[project.urls]
homepage = "https://github.com/gramps-project/gramps-web-api"
repository = "https://github.com/gramps-project/gramps-web-api"

[build-system]
requires = ["setuptools>=64.0", "setuptools_scm[toml]>=6.2", "wheel"]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"

[tool.setuptools.dynamic]
version = {attr = "gramps_webapi.__version__"}

[tool.setuptools.packages.find]
include = ["gramps_webapi", "gramps_webapi.*"]
